# ConnectCard

./: .gitignore  README.md  alembic.ini  database.py  docker-compose.yaml  info.txt  main.py  models.py  pubspec.yaml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: ddb0b9160733_fix_datetime_type.py
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/connect_card/: MainActivity.kt
app/: database.py  dependencies.py  encryption.py  main.py
app/auth/: auth.py  utils.py
app/config/: setings.py  settings.py
app/models/: models.py  user.py  visitcard.py
app/routers/: card.py  contact.py  contact_info.py  event.py  link_widget.py  user.py  user_router.py  visitcard_router.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: user_model.dart
lib/screens/: list_of_visit_card.dart  login_screen.dart  profile_screen.dart  register_screen.dart  settings_screen.dart  share_visit.dart  stat_screen.dart  visit_card_designer.dart  visit_card_profile.dart  welcome_screen.dart
lib/screens/authScreens/: telegram_auth_screen.dart  vk_auth_screen.dart
lib/utils/: snackbar_helper.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
