[project]
name = "connectcard-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitriy Astachov",email = "istpack_dima@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yes (>=0.0.1,<0.0.2)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "uuid (>=1.30,<2.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
